--- a/src/ViveCortelazor/Views/Home/History.cshtml
+++ b/src/ViveCortelazor/Views/Home/History.cshtml
@@ -11,5 +11,7 @@
 }
 
 <div class="container">
-    <markdown content="@Html.Raw(Localizer["History Text"].Value)"></markdown>
+    <div class="article">
+        <markdown content="@Html.Raw(Localizer["History Text"].Value)"></markdown>
+    </div>
 </div>
