--- a/src/ViveCortelazor/Views/Home/Index.cshtml.css
+++ b/src/ViveCortelazor/Views/Home/Index.cshtml.css
@@ -1,3 +1,20 @@
 ﻿.introduction {
     padding: 30px;
+    background-color: white;
+    margin-top: 20px;
+    margin-bottom: 110px;
+    border-radius: 12px;
+}
+
+@media (max-width: 575px) {
+    .introduction {
+        margin-bottom: 220px;
+        padding: 10px;
+    }
+}
+
+@media (max-width: 767px) {
+    .introduction {
+        margin-bottom: 220px;
+     }
 }
