--- a/src/ViveCortelazor/Views/Home/Privacy.cshtml
+++ b/src/ViveCortelazor/Views/Home/Privacy.cshtml
@@ -7,5 +7,7 @@
     ViewData["Robots"] = "noindex,follow";
 }
 <div class="container">
-    <markdown content="@Html.Raw(Localizer["Privacy Text"].Value)"></markdown>
+    <div class="article">
+        <markdown content="@Html.Raw(Localizer["Privacy Text"].Value)"></markdown>
+    </div>
 </div>
