--- a/src/ViveCortelazor/Views/Shared/_Layout.cshtml
+++ b/src/ViveCortelazor/Views/Shared/_Layout.cshtml
@@ -55,6 +55,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" href="@Url.RouteUrlLang("History", ViewContext.GetLang())">@Localizer["History"]</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="@Url.RouteUrlLang("WhatToDo", ViewContext.GetLang())">@Localizer["What to do"]</a>
+                        </li>
                     </ul>
                 </div>
 
@@ -86,6 +89,9 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-dark" href="@Url.RouteUrlLang("History", ViewContext.GetLang())">@Localizer["History"]</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" href="@Url.RouteUrlLang("WhatToDo", ViewContext.GetLang())">@Localizer["What to do"]</a>
                     </li>
                 </ul>
                 <hr />
