--- a/src/ViveCortelazor/Views/Shared/_LayoutIndex.cshtml
+++ b/src/ViveCortelazor/Views/Shared/_LayoutIndex.cshtml
@@ -62,6 +62,9 @@
                     <li class="nav-item">
                         <a class="nav-link text-dark" href="@Url.RouteUrlLang("WhatToDo", ViewContext.GetLang())">@Localizer["What to do"]</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" href="@Url.RouteUrlLang("Hiking", ViewContext.GetLang())">@Localizer["Hiking"]</a>
+                    </li>
                 </ul>
                 <hr />
                 <ul class="navbar-nav flex-grow-1">
