--- a/src/ViveCortelazor/Views/Shared/_Layout.cshtml
+++ b/src/ViveCortelazor/Views/Shared/_Layout.cshtml
@@ -50,16 +50,16 @@
                 <div class="navbar-collapse collapse">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" href="@Url.RouteUrlLang("Index", ViewContext.GetLang())">@Localizer["Home"]</a>
+                            <a class="nav-link text-dark" href="@Url.RouteUrl($"{ViewContext.GetLang()}/index")">@Localizer["Home"]</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" href="@Url.RouteUrlLang("History", ViewContext.GetLang())">@Localizer["History"]</a>
+                            <a class="nav-link text-dark" href="@Url.RouteUrl($"{ViewContext.GetLang()}/history")">@Localizer["History"]</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" href="@Url.RouteUrlLang("WhatToDo", ViewContext.GetLang())">@Localizer["What to do"]</a>
+                            <a class="nav-link text-dark" href="@Url.RouteUrl($"{ViewContext.GetLang()}/what-to-do")">@Localizer["What to do"]</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" href="@Url.RouteUrlLang("Hiking", ViewContext.GetLang())">@Localizer["Hiking"]</a>
+                            <a class="nav-link text-dark" href="@Url.RouteUrl($"{ViewContext.GetLang()}/hiking")">@Localizer["Hiking"]</a>
                         </li>
                     </ul>
                 </div>
@@ -88,21 +88,21 @@
             <div class="offcanvas-body">
                 <ul class="navbar-nav flex-grow-1">
                     <li class="nav-item">
-                        <a class="nav-link text-dark" href="@Url.RouteUrlLang("Index", ViewContext.GetLang())">@Localizer["Home"]</a>
+                        <a class="nav-link text-dark" href="@Url.RouteUrl($"{ViewContext.GetLang()}/index")">@Localizer["Home"]</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark" href="@Url.RouteUrlLang("History", ViewContext.GetLang())">@Localizer["History"]</a>
+                        <a class="nav-link text-dark" href="@Url.RouteUrl($"{ViewContext.GetLang()}/history")">@Localizer["History"]</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark" href="@Url.RouteUrlLang("WhatToDo", ViewContext.GetLang())">@Localizer["What to do"]</a>
+                        <a class="nav-link text-dark" href="@Url.RouteUrl($"{ViewContext.GetLang()}/what-to-do")">@Localizer["What to do"]</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark" href="@Url.RouteUrlLang("Hiking", ViewContext.GetLang())">@Localizer["Hiking"]</a>
+                        <a class="nav-link text-dark" href="@Url.RouteUrl($"{ViewContext.GetLang()}/hiking")">@Localizer["Hiking"]</a>
                     </li>
                 </ul>
                 <hr />
                 <ul class="navbar-nav flex-grow-1">
-                    @await Html.PartialAsync("_LanguagesCombo")
+                    @await Html.PartialAsync("_LanguagesCombo", string.Empty)
                 </ul>
             </div>
         </div>
