--- a/src/ViveCortelazor/Views/Blog/Blog.cshtml
+++ b/src/ViveCortelazor/Views/Blog/Blog.cshtml
@@ -1,17 +1,37 @@
-﻿@model ViveCortelazor.Models.ContentViewModel
+﻿@using ViveCortelazor.Extensions
+@model IReadOnlyList<ViveCortelazor.Models.ContentViewModel>
 
 @{
-    ViewData["Title"] = $"Blog - {Model.Title} - Vive Cortelazor - Sierra de Aracena";
-    ViewData["Keywords"] = Model.Keywords;
-    ViewData["Description"] = Model.Description;
-    ViewData["Image"] = Model.Image;
-    ViewData["ImageWidth"] = Model.ImageWidth;
-    ViewData["ImageHeight"] = Model.ImageHeight;
-    ViewData["Robots"] = Model.Robots;
+    ViewData["Title"] = $"Blog - Vive Cortelazor - Sierra de Aracena";
+    // ViewData["Keywords"] = Model.Keywords;
+    // ViewData["Description"] = Model.Description;
+    // ViewData["Image"] = Model.Image;
+    // ViewData["ImageWidth"] = Model.ImageWidth;
+    // ViewData["ImageHeight"] = Model.ImageHeight;
+    // ViewData["Robots"] = Model.Robots;
 }
 
 <div class="container">
-    <div class="article">
-        <markdown content="@Html.Raw(Model.Text)"></markdown>
-    </div>
+    @foreach (var post in Model)
+    {
+        <div class="row post mb-4">
+            <div class="col-md-4">
+                <a class="nav-link" href="blog/@post.Slug">
+                    <img src="@post.Image" class="img-fluid post-image rounded" alt="@post.Title">
+                </a>
+            </div>
+            <div class="col-md-8">
+                <h2>
+                    <a class="nav-link" href="blog/@post.Slug">
+                        @post.Title
+                    </a>
+                </h2>
+                <p class="text-muted">
+                    <a class="nav-link" href="blog/@post.Slug">
+                        @post.Description
+                    </a>
+                </p>
+            </div>
+        </div>
+    }
 </div>
