--- a/src/ViveCortelazor/Views/Shared/_Layout.cshtml
+++ b/src/ViveCortelazor/Views/Shared/_Layout.cshtml
@@ -61,6 +61,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" href="@Url.RouteUrl($"{ViewContext.GetLang()}/hiking")">@Localizer["Hiking"]</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="@Url.RouteUrl($"{ViewContext.GetLang()}/blog")">Blog</a>
+                        </li>
                     </ul>
                 </div>
 
@@ -98,6 +101,9 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-dark" href="@Url.RouteUrl($"{ViewContext.GetLang()}/hiking")">@Localizer["Hiking"]</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" href="@Url.RouteUrl($"{ViewContext.GetLang()}/blog")">Blog</a>
                     </li>
                 </ul>
                 <hr />
