--- a/src/ViveCortelazor/Views/Shared/_LayoutIndex.cshtml
+++ b/src/ViveCortelazor/Views/Shared/_LayoutIndex.cshtml
@@ -65,6 +65,9 @@
                     <li class="nav-item">
                         <a class="nav-link text-dark" href="@Url.RouteUrl($"{ViewContext.GetLang()}/hiking")">@Localizer["Hiking"]</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" href="@Url.RouteUrl($"{ViewContext.GetLang()}/blog")">Blog</a>
+                    </li>
                 </ul>
                 <hr />
                 <ul class="navbar-nav flex-grow-1">
