Fix language combo for blog posts #89

--- a/src/ViveCortelazor/Views/Shared/_LanguagesCombo.cshtml
+++ b/src/ViveCortelazor/Views/Shared/_LanguagesCombo.cshtml
@@ -48,6 +48,12 @@
             return Url.RouteUrlLang(routeName, lang);
         }
 
+        if (ViewContext.RouteData.Values.ContainsKey("post"))
+        {
+            routeName = $"{lang}/blog/{ViewContext.RouteData.Values["post"]}";
+            return Url.RouteUrlLang(routeName, lang);
+        }
+
         routeName = $"{lang}/{ViewContext.RouteData.Values["action"]}";
         return Url.RouteUrlLang(routeName, lang);
     }
