--- a/src/ViveCortelazor/Views/Blog/Blog.cshtml
+++ b/src/ViveCortelazor/Views/Blog/Blog.cshtml
@@ -41,7 +41,7 @@
             @if (Model.HasNextPage)
             {
                 <a href="/@ViewContext.GetLang()/blog/@(Model.Page + 1)" class="btn pagination-button rounded py-2 px-3">
-                    <i class="bi bi-arrow-left me-2"></i>@Localizer["Previous"]
+                    <i class="fas fa-angle-left"></i>&nbsp;@Localizer["Previous"]
                 </a>
             }
             else
@@ -53,7 +53,7 @@
             @if (Model.HasPreviousPage)
             {
                 <a href="/@ViewContext.GetLang()/blog/@(Model.Page - 1)" class="btn pagination-button rounded py-2 px-3">
-                    @Localizer["Next"]<i class="bi bi-arrow-right ms-2"></i>
+                    @Localizer["Next"]&nbsp;<i class="fas fa-angle-right"></i>
                 </a>
             }
         </div>
