Add last 3 posts at home page #97 #89

--- a/src/ViveCortelazor/Views/Home/Index.cshtml.css
+++ b/src/ViveCortelazor/Views/Home/Index.cshtml.css
@@ -6,6 +6,19 @@
     border-radius: 12px;
 }
 
+.posts {
+    padding: 30px;
+    background-color: white;
+    margin-top: 20px;
+    border-radius: 12px;
+}
+
+.post-home {
+    padding: 15px;
+    padding-bottom: 0px;
+    padding-top: 0px;
+}
+
 @media (max-width: 575px) {
     .introduction {
         margin-bottom: 220px;
