--- a/src/ViveCortelazor/Views/Blog/Blog.cshtml
+++ b/src/ViveCortelazor/Views/Blog/Blog.cshtml
@@ -3,13 +3,13 @@
 @model PagedList<ViveCortelazor.Models.ContentViewModel>
 
 @{
-    ViewData["Title"] = $"Blog - Vive Cortelazor - Sierra de Aracena";
-    // ViewData["Keywords"] = Model.Keywords;
-    // ViewData["Description"] = Model.Description;
-    // ViewData["Image"] = Model.Image;
-    // ViewData["ImageWidth"] = Model.ImageWidth;
-    // ViewData["ImageHeight"] = Model.ImageHeight;
-    // ViewData["Robots"] = Model.Robots;
+    ViewData["Title"] = $"{Localizer["Title"].Value} - Vive Cortelazor - Sierra de Aracena";
+    ViewData["Keywords"] = Localizer["Keywords"];
+    ViewData["Description"] = Localizer["Description"];
+    ViewData["Image"] = "https://www.vivecortelazor.es/images/carousel/cortelazor1.jpg";
+    ViewData["ImageWidth"] = "1920";
+    ViewData["ImageHeight"] = "1080";
+    ViewData["Robots"] = "all";
 }
 
 <div class="container blog">
