--- a/src/ViveCortelazor/Views/Shared/_Footer.cshtml
+++ b/src/ViveCortelazor/Views/Shared/_Footer.cshtml
@@ -14,7 +14,7 @@
             </div>
 
             <div class="col-sm-12 col-md-4 order-md-1">
-                <p><a href="@Url.RouteUrl($"{ViewContext.GetLang()}/index", ViewContext.GetLang())" title="@Localizer["Cortelazor and Sierra de Aracena"]">@Localizer["Cortelazor and Sierra de Aracena"]</a></p>
+                <p><a href="@Url.RouteUrl($"{ViewContext.GetLang()}/index")" title="@Localizer["Cortelazor and Sierra de Aracena"]">@Localizer["Cortelazor and Sierra de Aracena"]</a></p>
                 <p>
                     <a class="slim" href="@Url.RouteUrl($"{ViewContext.GetLang()}/privacy")">@Localizer["Privacy"]</a> -
                     <a class="slim" href="@Url.RouteUrl($"{ViewContext.GetLang()}/cookies")">@Localizer["Cookies"]</a>
