--- a/src/ViveCortelazor/Views/Home/Index.cshtml.css
+++ b/src/ViveCortelazor/Views/Home/Index.cshtml.css
@@ -19,6 +19,12 @@
     padding-top: 0px;
 }
 
+@media (min-width: 992px) {
+    .post-home hr {
+        display: none;
+    }
+}
+
 @media (max-width: 575px) {
     .introduction {
         margin-bottom: 220px;
