Add each page to carousel and clean #89

--- a/src/ViveCortelazor/Views/Home/Index.cshtml.css
+++ b/src/ViveCortelazor/Views/Home/Index.cshtml.css
@@ -19,6 +19,10 @@
     padding-top: 0px;
 }
 
+.smaller-text {
+    font-size: 1.5rem;
+}
+
 @media (min-width: 992px) {
     .post-home hr {
         display: none;
