--- a/src/ViveCortelazor/Views/Home/Index.cshtml
+++ b/src/ViveCortelazor/Views/Home/Index.cshtml
@@ -18,6 +18,9 @@
         <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselId" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
             <button type="button" data-bs-target="#carouselId" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselId" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            <button type="button" data-bs-target="#carouselId" data-bs-slide-to="3" aria-label="Slide 4"></button>
+            <button type="button" data-bs-target="#carouselId" data-bs-slide-to="4" aria-label="Slide 5"></button>
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
@@ -25,7 +28,12 @@
                 <div class="carousel-caption">
                     <div class="text-center p-4">
                         <img class="z-3 main-logo mb-3 mb-md-4" src="~/images/fox.svg" alt="@Localizer["Cortelazor and Sierra de Aracena"]" />
-                        <h1 class="text-white text-uppercase fw-bold mb-3 mb-md-4">Vive Cortelazor</h1>
+                        <h1 class="text-white text-uppercase fw-bold mb-3 mb-md-4">
+                            <a href="@Url.RouteUrl($"{ViewContext.GetLang()}/index")">
+                                <span class="line-break">Cortelazor</span>
+                                <span class="line-break smaller-text">Sierra de Aracena</span>
+                            </a>
+                        </h1>
                     </div>
                 </div>
             </div>
@@ -34,7 +42,42 @@
                 <div class="carousel-caption">
                     <div class="text-center p-4">
                         <img class="z-3 main-logo mb-3 mb-md-4" src="~/images/fox.svg" alt="@Localizer["Cortelazor and Sierra de Aracena"]" />
-                        <h2 class="text-white text-uppercase fw-bold mb-3 mb-md-4">Vive Cortelazor</h2>
+                        <h2 class="text-white text-uppercase fw-bold mb-3 mb-md-4">
+                            <a href="@Url.RouteUrl($"{ViewContext.GetLang()}/history")">@Localizer["History"]</a>
+                        </h2>
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img loading="lazy" src="~/images/carousel/cortelazor1.jpg" class="img-fluid" alt="Cortelazor la Real">
+                <div class="carousel-caption">
+                    <div class="text-center p-4">
+                        <img class="z-3 main-logo mb-3 mb-md-4" src="~/images/fox.svg" alt="@Localizer["Cortelazor and Sierra de Aracena"]" />
+                        <h2 class="text-white text-uppercase fw-bold mb-3 mb-md-4">
+                            <a href="@Url.RouteUrl($"{ViewContext.GetLang()}/what-to-do")">@Localizer["What to do"]</a>
+                        </h2>
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img loading="lazy" src="~/images/carousel/cortelazor2.jpg" class="img-fluid" alt="Cortelazor la Real">
+                <div class="carousel-caption">
+                    <div class="text-center p-4">
+                        <img class="z-3 main-logo mb-3 mb-md-4" src="~/images/fox.svg" alt="@Localizer["Cortelazor and Sierra de Aracena"]" />
+                        <h2 class="text-white text-uppercase fw-bold mb-3 mb-md-4">
+                            <a href="@Url.RouteUrl($"{ViewContext.GetLang()}/hiking")">@Localizer["Hiking"]</a>
+                        </h2>
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img loading="lazy" src="~/images/carousel/cortelazor1.jpg" class="img-fluid" alt="Cortelazor la Real">
+                <div class="carousel-caption">
+                    <div class="text-center p-4">
+                        <img class="z-3 main-logo mb-3 mb-md-4" src="~/images/fox.svg" alt="@Localizer["Cortelazor and Sierra de Aracena"]" />
+                        <h2 class="text-white text-uppercase fw-bold mb-3 mb-md-4">
+                            <a href="@Url.RouteUrl($"{ViewContext.GetLang()}/blog")">@Localizer["Blog"]</a>
+                        </h2>
                     </div>
                 </div>
             </div>
