--- a/src/ViveCortelazor/wwwroot/css/site.css
+++ b/src/ViveCortelazor/wwwroot/css/site.css
@@ -64,6 +64,10 @@ a:hover {
     color: var(--color-palette-light-1);
 }
 
+.line-break {
+    display: block;
+}
+
 .logo-navbar {
     width: 45px;
 }
@@ -211,27 +215,30 @@ a.social-icon:hover {
     min-height: 100vh
 }
 
-    .carousel-header .carousel-inner .carousel-item > img {
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-    }
+.carousel-header .carousel-inner .carousel-item > img {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
 
-    .carousel-header .carousel-inner .carousel-item .carousel-caption {
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        top: 0;
-        left: 0;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        text-align: center;
-        background: linear-gradient(rgba(0, 0, 0, .6), rgba(0, 0, 0, 0.6));
-        background-size: cover;
-    }
+.carousel-header .carousel-inner .carousel-item .carousel-caption {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    background: linear-gradient(rgba(0, 0, 0, .6), rgba(0, 0, 0, 0.6));
+    background-size: cover;
+}
 
+.carousel-item a {
+    color: white; 
+}
 
 @media (max-width: 767px) {
 
