Add Cortelafolk 2025 post #89

--- a/src/ViveCortelazor/Views/Home/Index.cshtml.css
+++ b/src/ViveCortelazor/Views/Home/Index.cshtml.css
@@ -19,6 +19,11 @@
     padding-top: 0px;
 }
 
+.post-home img {
+    max-height: 200px;
+    border-radius: 12px;
+}
+
 .smaller-text {
     font-size: 1.5rem;
 }
