--- a/src/ViveCortelazor/Views/Blog/Post.cshtml
+++ b/src/ViveCortelazor/Views/Blog/Post.cshtml
@@ -1,4 +1,5 @@
-﻿@model ViveCortelazor.Models.ContentViewModel
+﻿@inject IViewLocalizer Localizer
+@model ViveCortelazor.Models.ContentViewModel
 
 @{
     ViewData["Title"] = $"{Model.Title} - Vive Cortelazor - Sierra de Aracena";
@@ -12,6 +13,9 @@
 
 <div class="container">
     <div class="article">
+        <h1>@Model.Title</h1>
+        <hr />
+        <p class="post-date text-end">@Localizer["Published"] @Model.Date.ToLongDateString()</p>
         <markdown content="@Html.Raw(Model.Text)"></markdown>
     </div>
 </div>
