--- a/src/ViveCortelazor/Views/Blog/Blog.cshtml
+++ b/src/ViveCortelazor/Views/Blog/Blog.cshtml
@@ -17,23 +17,27 @@
     {
         @foreach (var post in Model.Items)
         {
-            <div class="row post mb-4">
-                <div class="col-md-4">
-                    <a class="nav-link" href="/@ViewContext.GetLang()/blog/@post.Slug">
-                        <img src="@post.Image" class="img-fluid post-image rounded" alt="@post.Title">
-                    </a>
+            <div class="post">
+                <div class="row">
+                    <div class="col-md-12 d-flex justify-content-center">
+                        <a class="nav-link" href="/@ViewContext.GetLang()/blog/@post.Slug">
+                            <img src="@post.Image" class="img-fluid post-image rounded" alt="@post.Title">
+                        </a>
+                    </div>
                 </div>
-                <div class="col-md-8">
-                    <h2>
-                        <a class="nav-link" href="/@ViewContext.GetLang()/blog/@post.Slug">
-                            @post.Title
-                        </a>
-                    </h2>
-                    <p class="text-muted">
-                        <a class="nav-link" href="/@ViewContext.GetLang()/blog/@post.Slug">
-                            @post.Description
-                        </a>
-                    </p>
+                <div class="row mb-4">
+                    <div class="col-md-12">
+                        <h2>
+                            <a class="nav-link" href="/@ViewContext.GetLang()/blog/@post.Slug">
+                                @post.Title
+                            </a>
+                        </h2>
+                        <p class="text-muted">
+                            <a class="nav-link" href="/@ViewContext.GetLang()/blog/@post.Slug">
+                                @post.Description
+                            </a>
+                        </p>
+                    </div>
                 </div>
             </div>
         }
