Add Cortelafolk 2025 to main page carousel #126
Related Work Items: #12, #126

--- a/src/ViveCortelazor/wwwroot/css/site.css
+++ b/src/ViveCortelazor/wwwroot/css/site.css
@@ -92,6 +92,11 @@ a:hover {
     height: 150px !important;
 }
 
+.cortelafolk-logo {
+    width: 300px !important;
+    height: auto !important;
+}
+
 .custom-toggler {
     position: absolute;
     right: 15px;
