--- a/src/ViveCortelazor/Views/Home/Index.cshtml
+++ b/src/ViveCortelazor/Views/Home/Index.cshtml
@@ -27,11 +27,13 @@
                 <img loading="lazy" src="~/images/carousel/cortelazor1.jpg" class="img-fluid" alt="Cortelazor la Real">
                 <div class="carousel-caption">
                     <div class="text-center p-4">
-                        <img class="z-3 main-logo mb-3 mb-md-4" src="~/images/fox.svg" alt="@Localizer["Cortelazor and Sierra de Aracena"]" />
+                        <a href="@ViewContext.GetLang()/blog/cortelafolk-2025">
+                            <img class="z-3 cortelafolk-logo mb-3 mb-md-4" src="~/images/carousel/cortelafolk-logo.png" alt="@Localizer["Cortelafolk 2025"]" />
+                        </a>
                         <h1 class="text-white text-uppercase fw-bold mb-3 mb-md-4">
-                            <a href="@Url.RouteUrl($"{ViewContext.GetLang()}/index")">
-                                <span class="line-break">Cortelazor</span>
-                                <span class="line-break smaller-text">Sierra de Aracena</span>
+                            <a href="@ViewContext.GetLang()/blog/cortelafolk-2025">
+                                <span class="line-break">Cortelafolk 2025</span>
+                                <span class="line-break smaller-text">Folk Music Festival</span>
                             </a>
                         </h1>
                     </div>
