Add tests for 404 page #56

--- a/src/ViveCortelazor/Views/Home/NotFound.cshtml
+++ b/src/ViveCortelazor/Views/Home/NotFound.cshtml
@@ -4,7 +4,7 @@
 @inject IViewLocalizer Localizer
 
 @{
-    ViewData["Title"] = Localizer["PageNotFound"];
+    ViewData["Title"] = $"{Localizer["PageNotFound"].Value} - Vive Cortelazor - Sierra de Aracena";
 }
 
 <div class="container pb-3 text-not-found">
