Fix languages combo for 404 #56

--- a/src/ViveCortelazor/Views/Shared/_LanguagesCombo.cshtml
+++ b/src/ViveCortelazor/Views/Shared/_LanguagesCombo.cshtml
@@ -40,6 +40,11 @@
 
     string? GetRoute(string lang)
     {
+        if ("Error".Equals(ViewContext.RouteData.Values["Action"]))
+        {
+            return Url.Action("Index", "Home", new { lang });
+        }
+
         var routeValueDictionary = new RouteValueDictionary(ViewContext.RouteData.Values)
         {
             ["lang"] = lang
