--- a/src/ViveCortelazor/Views/Shared/_Layout.cshtml
+++ b/src/ViveCortelazor/Views/Shared/_Layout.cshtml
@@ -59,6 +59,9 @@
                             <a class="nav-link text-dark" href="@Url.RouteUrl($"{ViewContext.GetLang()}/what-to-do")">@Localizer["What to do"]</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" href="@Url.RouteUrl($"{ViewContext.GetLang()}/where-to-eat")">@Localizer["Where to eat"]</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" href="@Url.RouteUrl($"{ViewContext.GetLang()}/hiking")">@Localizer["Hiking"]</a>
                         </li>
                         <li class="nav-item">
@@ -98,6 +101,9 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-dark" href="@Url.RouteUrl($"{ViewContext.GetLang()}/what-to-do")">@Localizer["What to do"]</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" href="@Url.RouteUrl($"{ViewContext.GetLang()}/where-to-eat")">@Localizer["Where to eat"]</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-dark" href="@Url.RouteUrl($"{ViewContext.GetLang()}/hiking")">@Localizer["Hiking"]</a>
