Add h1 to blog #136

--- a/src/ViveCortelazor/Views/Blog/Blog.cshtml
+++ b/src/ViveCortelazor/Views/Blog/Blog.cshtml
@@ -13,6 +13,10 @@
 }
 
 <div class="container blog">
+    <div class="post">
+        <h1>@Localizer["Blog Cortelazor"]</h1>
+    </div>
+
     @if (Model.Items.Count > 0)
     {
         @foreach (var post in Model.Items)
