--- a/src/ViveCortelazor/Views/Shared/_MetaSeo.cshtml
+++ b/src/ViveCortelazor/Views/Shared/_MetaSeo.cshtml
@@ -6,9 +6,10 @@
 @inject IOptions<WebSettings> WebSettings
 
 @{
+    bool chooseLanguage = "ChooseLanguage".Equals(ViewContext.RouteData.Values["Action"]);
     string currentCanonical = Url.Canonical(WebSettings.Value.Host, ViewContext.RouteData, @CultureInfo.CurrentCulture.Name);
-    string esCanonical = Url.Canonical(WebSettings.Value.Host, ViewContext.RouteData, "es");
-    string enCanonical = Url.Canonical(WebSettings.Value.Host, ViewContext.RouteData, "en");
+    string esCanonical = chooseLanguage ? $"{WebSettings.Value.Host}/es" : Url.Canonical(WebSettings.Value.Host, ViewContext.RouteData, "es");
+    string enCanonical = chooseLanguage ? $"{WebSettings.Value.Host}/en" : Url.Canonical(WebSettings.Value.Host, ViewContext.RouteData, "en");
     string imagePath = $"{WebSettings.Value.Host}{ViewData["Image"]}";
 }
 
