Change ChooseLanguage to Home and update tests #152

--- a/src/ViveCortelazor/Views/Shared/_LanguagesCombo.cshtml
+++ b/src/ViveCortelazor/Views/Shared/_LanguagesCombo.cshtml
@@ -46,7 +46,7 @@
             return Url.Action("Index", "Home", new { lang });
         }
 
-        if ("ChooseLanguage".Equals(ViewContext.RouteData.Values["Action"]))
+        if ("Home".Equals(ViewContext.RouteData.Values["Action"]))
         {
             return Url.Action("Index", "Home", new { lang });
         }
