Add where to sleep #87

--- a/src/ViveCortelazor/Views/Shared/_LayoutIndex.cshtml
+++ b/src/ViveCortelazor/Views/Shared/_LayoutIndex.cshtml
@@ -66,6 +66,9 @@
                         <a class="nav-link text-dark" href="@Url.RouteUrl($"{ViewContext.GetLang()}/where-to-eat")">@Localizer["Where to eat"]</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link text-dark" href="@Url.RouteUrl($"{ViewContext.GetLang()}/where-to-sleep")">@Localizer["Where to sleep"]</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link text-dark" href="@Url.RouteUrl($"{ViewContext.GetLang()}/hiking")">@Localizer["Hiking"]</a>
                     </li>
                     <li class="nav-item">
