--- a/src/ViveCortelazor/Views/Shared/_Layout.cshtml
+++ b/src/ViveCortelazor/Views/Shared/_Layout.cshtml
@@ -50,9 +50,6 @@
                 <div class="navbar-collapse collapse">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" href="@Url.RouteUrl($"{ViewContext.GetLang()}/index")">@Localizer["Home"]</a>
-                        </li>
-                        <li class="nav-item">
                             <a class="nav-link text-dark" href="@Url.RouteUrl($"{ViewContext.GetLang()}/history")">@Localizer["History"]</a>
                         </li>
                         <li class="nav-item">
@@ -60,6 +57,9 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" href="@Url.RouteUrl($"{ViewContext.GetLang()}/where-to-eat")">@Localizer["Where to eat"]</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="@Url.RouteUrl($"{ViewContext.GetLang()}/where-to-sleep")">@Localizer["Where to sleep"]</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" href="@Url.RouteUrl($"{ViewContext.GetLang()}/hiking")">@Localizer["Hiking"]</a>
@@ -104,6 +104,9 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-dark" href="@Url.RouteUrl($"{ViewContext.GetLang()}/where-to-eat")">@Localizer["Where to eat"]</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" href="@Url.RouteUrl($"{ViewContext.GetLang()}/where-to-sleep")">@Localizer["Where to sleep"]</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-dark" href="@Url.RouteUrl($"{ViewContext.GetLang()}/hiking")">@Localizer["Hiking"]</a>
