--- a/src/ViveCortelazor/Views/Shared/_Accommodation.cshtml
+++ b/src/ViveCortelazor/Views/Shared/_Accommodation.cshtml
@@ -1,25 +1,31 @@
 ﻿@using ViveCortelazor.Extensions
+@inject IViewLocalizer Localizer
+@model ViveCortelazor.Models.AccommodationViewmodel
 
-<div class="accommodation">
+<div class="accommodation h-100 d-flex flex-column">
     <div class="row">
-        <div class="col-md-12 d-flex justify-content-center">
+        <div class="col">
             <a class="nav-link" href="@Model.Url">
-                <img src="@Model.Image" class="img-fluid post-image rounded" alt="@Model.Title">
+                <img src="@Model.Image" class="img-fluid accommodation-image rounded" alt="@Model.Name">
             </a>
         </div>
     </div>
-    <div class="row mb-4">
-        <div class="col-md-12">
-            <h2>
+    <div class="row flex-fill" style="flex:1 1 auto;">
+        <div class="col accommodation-content d-flex flex-column h-100">
+            <h5>
                 <a class="nav-link" href="@Model.Url">
-                    @Model.Title
+                    @Model.Name
                 </a>
-            </h2>
-            <p class="text-muted">
-                <a class="nav-link" href="@Model.Url">
-                    @Model.Description
-                </a>
+            </h5>
+            <p class="mb-1">
+                @Model.Description
             </p>
+            <p class="text-muted mb-0">
+                @Model.Description2
+            </p>
+            <div class="availability-btn-container">
+                <a href="@Model.Url" class="availability-btn">@Localizer["Availability"]</a>
+            </div>
         </div>
     </div>
 </div>
