--- a/src/ViveCortelazor/Views/Blog/Blog.cshtml
+++ b/src/ViveCortelazor/Views/Blog/Blog.cshtml
@@ -5,11 +5,19 @@
 @{
     ViewData["Title"] = $"{Localizer["Title"].Value} - {Localizer["Page"].Value} {Model.Page}";
     ViewData["Keywords"] = Localizer["Keywords"];
-    ViewData["Description"] = $"{Localizer["Description"]} - {Localizer["Page"].Value} {Model.Page}";
+    ViewData["Description"] = $"{Localizer["Description"].Value} - {Localizer["Page"].Value} {Model.Page}";
     ViewData["Image"] = "/images/carousel/cortelazor1.jpg";
     ViewData["ImageWidth"] = "1920";
     ViewData["ImageHeight"] = "1080";
     ViewData["Robots"] = "all";
+}
+
+@functions {
+    public string GetBlogPageUrl(int page)
+    {
+        var lang = ViewContext.GetLang();
+        return page == 1 ? $"/{lang}/blog" : $"/{lang}/blog/{page}";
+    }
 }
 
 <div class="container blog">
@@ -28,7 +36,7 @@
             <div class="col-12 d-flex justify-content-between">
                 @if (Model.HasNextPage)
                 {
-                    <a href="/@ViewContext.GetLang()/blog/@(Model.Page + 1)" class="btn pagination-button rounded py-2 px-3">
+                    <a href="@GetBlogPageUrl(Model.Page + 1)" class="btn pagination-button rounded py-2 px-3">
                         <i class="fas fa-angle-left"></i>&nbsp;@Localizer["Previous"]
                     </a>
                 }
@@ -40,7 +48,7 @@
 
                 @if (Model.HasPreviousPage)
                 {
-                    <a href="/@ViewContext.GetLang()/blog/@(Model.Page - 1)" class="btn pagination-button rounded py-2 px-3">
+                    <a href="@GetBlogPageUrl(Model.Page - 1)" class="btn pagination-button rounded py-2 px-3">
                         @Localizer["Next"]&nbsp;<i class="fas fa-angle-right"></i>
                     </a>
                 }
