Add accommodation list #87

--- a/src/ViveCortelazor/Views/Accommodation/Index.cshtml
+++ b/src/ViveCortelazor/Views/Accommodation/Index.cshtml
@@ -11,7 +11,7 @@
     ViewData["Robots"] = "all";
 }
 
-<div class="container accommodations">
+<div class="container">
     <div class="accommodations">
         <h1>@Localizer["Where to sleep"]</h1>
     </div>
