--- a/src/ViveCortelazor/Views/Accommodation/Index.cshtml
+++ b/src/ViveCortelazor/Views/Accommodation/Index.cshtml
@@ -13,7 +13,7 @@
 
 <div class="container">
     <div class="accommodations">
-        <h1>@Localizer["Where to sleep"]</h1>
+        <h1>@Localizer["Rural accommodation"]</h1>
     </div>
 
     <div class="row">
