--- a/src/ViveCortelazor/Views/Home/Index.cshtml
+++ b/src/ViveCortelazor/Views/Home/Index.cshtml
@@ -21,6 +21,8 @@
             <button type="button" data-bs-target="#carouselId" data-bs-slide-to="2" aria-label="Slide 3"></button>
             <button type="button" data-bs-target="#carouselId" data-bs-slide-to="3" aria-label="Slide 4"></button>
             <button type="button" data-bs-target="#carouselId" data-bs-slide-to="4" aria-label="Slide 5"></button>
+            <button type="button" data-bs-target="#carouselId" data-bs-slide-to="5" aria-label="Slide 6"></button>
+            <button type="button" data-bs-target="#carouselId" data-bs-slide-to="6" aria-label="Slide 7"></button>
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
@@ -57,6 +59,28 @@
                         <img class="z-3 main-logo mb-3 mb-md-4" src="~/images/fox.svg" alt="@Localizer["Cortelazor and Sierra de Aracena"]" />
                         <h2 class="text-white text-uppercase fw-bold mb-3 mb-md-4">
                             <a href="@Url.RouteUrl($"{ViewContext.GetLang()}/what-to-do")">@Localizer["What to do"]</a>
+                        </h2>
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img loading="lazy" src="~/images/carousel/cortelazor1.jpg" class="img-fluid" alt="Cortelazor la Real">
+                <div class="carousel-caption">
+                    <div class="text-center p-4">
+                        <img class="z-3 main-logo mb-3 mb-md-4" src="~/images/fox.svg" alt="@Localizer["Cortelazor and Sierra de Aracena"]" />
+                        <h2 class="text-white text-uppercase fw-bold mb-3 mb-md-4">
+                            <a href="@Url.RouteUrl($"{ViewContext.GetLang()}/where-to-eat")">@Localizer["Where to eat"]</a>
+                        </h2>
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img loading="lazy" src="~/images/carousel/cortelazor1.jpg" class="img-fluid" alt="Cortelazor la Real">
+                <div class="carousel-caption">
+                    <div class="text-center p-4">
+                        <img class="z-3 main-logo mb-3 mb-md-4" src="~/images/fox.svg" alt="@Localizer["Cortelazor and Sierra de Aracena"]" />
+                        <h2 class="text-white text-uppercase fw-bold mb-3 mb-md-4">
+                            <a href="@Url.RouteUrl($"{ViewContext.GetLang()}/where-to-sleep")">@Localizer["Rural accommodation"]</a>
                         </h2>
                     </div>
                 </div>
